# university-db

./: .gitignore  CMakeLists.txt
src/: Database.cpp  Database.hpp  Person.cpp  Person.hpp  Student.cpp  Student.hpp  Worker.cpp  Worker.hpp  main.cpp
